# STTN

./: .gitignore  CHANGES.txt  TEST_GUIDE.md  install_py310.sh  main.py  pyproject.toml  test.py  test_mask.py  test_simple.py  test_workflow.sh  train.py  visualization.ipynb
.cursor/rules/: non-doc.mdc
core/: utils.py
src/core/: dataset.py  trainer.py
src/model/: sttn.py
sttn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
