[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sttn"
version = "0.2.0"
description = "Spatial-Temporal Transformer Network - Python 3.10 compatible version"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
authors = [
    { name = "STTN Contributors" }
]
keywords = ["video-inpainting", "deep-learning", "pytorch", "transformer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core ML frameworks - upgraded for Python 3.10 compatibility
    "torch>=1.13.0,<2.5.0",
    "torchvision>=0.14.0,<0.20.0",

    # Scientific computing
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.3,<2.0.0",
    "scikit-image>=0.19.0,<0.25.0",
    "scikit-learn>=1.0.0,<1.6.0",

    # Image/Video processing
    "opencv-python>=4.5.4,<5.0.0",
    "pillow>=9.0.0,<11.0.0",
    "imageio>=2.9.0,<3.0.0",

    # Data handling
    "pandas>=1.3.5,<3.0.0",
    "h5py>=3.6.0,<4.0.0",
    "lmdb>=1.2.1,<2.0.0",

    # Visualization & Logging
    "matplotlib>=3.5.0,<4.0.0",
    "tensorboard>=2.8.0,<3.0.0",
    "tensorboardX>=2.5.0,<3.0.0",
    "tqdm>=4.62.0,<5.0.0",

    # Jupyter support
    "ipython>=8.0.0,<9.0.0",
    "ipykernel>=6.9.0,<7.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "notebook>=6.4.8,<8.0.0",

    # Utilities
    "pyyaml>=6.0.0,<7.0.0",
    "requests>=2.27.0,<3.0.0",
    "tifffile>=2021.11.2,<2025.0.0",
    "pywavelets>=1.2.0,<2.0.0",

    # Development tools (optional but useful)
    "pytest>=7.0.0,<9.0.0",
    "black>=22.0.0,<25.0.0",
    "flake8>=4.0.0,<8.0.0",
]

[project.optional-dependencies]
# GPU support (CUDA-specific packages)
cuda = [
    "cupy-cuda11x>=11.0.0,<14.0.0",  # For CUDA 11.x
]

cuda12 = [
    "cupy-cuda12x>=12.0.0,<14.0.0",  # For CUDA 12.x
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.931",
]

# Full installation with all optional dependencies
all = [
    "sttn[cuda12,dev]",
]

[project.urls]
Homepage = "https://github.com/researchmm/STTN"
Repository = "https://github.com/researchmm/STTN"
Documentation = "https://github.com/researchmm/STTN/blob/master/README.md"

[tool.setuptools]
packages = ["core", "model"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=core --cov=model --cov-report=html --cov-report=term"
